--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <color name="police_blue">#34536A</color>
+    <color name="steel_teal">#5A7E99</color>
+    <color name="carmine_pink">#E65738</color>
+    <color name="flesh">#FEE4D6</color>
+    <color name="gunmetal">#293441</color>
+
+    <color name="bright_gray">#EEEEEE</color>
+
 </resources>
