--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -7,4 +7,17 @@
     android:background="@color/police_blue"
     tools:context=".ui.Splash">
 
+    <Button
+        android:id="@+id/btnEmpezar"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/sh_bg_btn_gunmetal"
+        android:text="@string/empezar"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
 </FrameLayout>
