--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="gunmetal">#293441</color>
 
     <color name="bright_gray">#EEEEEE</color>
+    <color name="dust_storm">#E5D0C5</color>
 
 </resources>
