--- a/app/src/main/res/layout/fragment_registrar.xml
+++ b/app/src/main/res/layout/fragment_registrar.xml
@@ -146,13 +146,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnGuardar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:layout_marginTop="30dp"
             android:background="@drawable/sh_bg_btn_gunmetal"
-            android:text="@string/login"
+            android:text="@string/guardar"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
