--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,6 +26,9 @@
         <action
             android:id="@+id/action_navigation_login_to_navigation_inicio"
             app:destination="@id/navigation_inicio" />
+        <action
+            android:id="@+id/action_navigation_login_to_navigation_olvidastes"
+            app:destination="@id/navigation_olvidastes" />
     </fragment>
     <fragment
         android:id="@+id/navigation_registrar"
@@ -34,13 +37,17 @@
         tools:layout="@layout/fragment_registrar" >
         <action
             android:id="@+id/action_navigation_registrar_to_navigation_verificar"
-            app:destination="@id/navigation_verificar" />
+            app:destination="@id/navigation_validar" />
     </fragment>
     <fragment
-        android:id="@+id/navigation_verificar"
-        android:name="pe.edu.senati.apkcavoshcafes101.ui.Verificar"
-        android:label="fragment_verificar"
-        tools:layout="@layout/fragment_verificar" />
+        android:id="@+id/navigation_validar"
+        android:name="pe.edu.senati.apkcavoshcafes101.ui.Validar"
+        android:label="fragment_validar"
+        tools:layout="@layout/fragment_validar">
+        <action
+            android:id="@+id/action_navigation_verificar_to_navigation_passwordd"
+            app:destination="@id/navigation_passwordd" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_inicio"
         android:name="pe.edu.senati.apkcavoshcafes101.ui.Inicio"
@@ -97,4 +104,18 @@
         android:name="pe.edu.senati.apkcavoshcafes101.ui.MenuProductoPersonalizar"
         android:label="fragment_menu_producto_personalizar"
         tools:layout="@layout/fragment_menu_producto_personalizar" />
+    <fragment
+        android:id="@+id/navigation_olvidastes"
+        android:name="pe.edu.senati.apkcavoshcafes101.ui.Olvidastes"
+        android:label="fragment_olvidastes"
+        tools:layout="@layout/fragment_olvidastes" >
+        <action
+            android:id="@+id/action_navigation_olvidastes_to_navigation_verificar"
+            app:destination="@id/navigation_validar" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_passwordd"
+        android:name="pe.edu.senati.apkcavoshcafes101.ui.Passwordd"
+        android:label="fragment_passwordd"
+        tools:layout="@layout/fragment_passwordd" />
 </navigation>
