--- a/app/src/main/res/layout/fragment_registrar.xml
+++ b/app/src/main/res/layout/fragment_registrar.xml
@@ -7,28 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.Registrar">
 
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@drawable/sh_bg_header_police_blue" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
-            android:layout_marginStart="20dp"
-            android:text="Let's get you registered!"
-            android:textColor="@color/flesh"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </FrameLayout>
+        android:paddingHorizontal="16dp"
+        android:background="@drawable/sh_bg_header_police_blue"
+        android:gravity="start|center"
+        android:text="¡Vamos a registrarte!"
+        android:textColor="@color/flesh"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="96dp"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -38,8 +32,8 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnIngresar"
                 style="?android:attr/buttonBarButtonStyle"
+                android:id="@+id/btnIngresar"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/sh_bg_btn_bright_gray"
@@ -50,7 +44,6 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btnRegistrar"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -69,7 +62,7 @@
             android:id="@+id/tilNombres"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="36dp"
             app:endIconMode="clear_text"
             app:hintEnabled="false" >
 
@@ -78,8 +71,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/se_bg_edt_police_blue"
                 android:inputType="textPersonName"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
+                android:padding="16dp"
                 android:textColorHint="@color/steel_teal"
                 android:hint="Nombres" />
 
@@ -98,8 +90,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/se_bg_edt_police_blue"
                 android:inputType="textEmailAddress"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
+                android:padding="16dp"
                 android:textColorHint="@color/steel_teal"
                 android:hint="@string/correo" />
 
@@ -118,8 +109,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/se_bg_edt_police_blue"
                 android:inputType="textPassword"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
+                android:padding="16dp"
                 android:textColorHint="@color/steel_teal"
                 android:hint="@string/passwordd" />
 
@@ -138,21 +128,19 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/se_bg_edt_police_blue"
                 android:inputType="textPassword"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
+                android:padding="16dp"
                 android:textColorHint="@color/steel_teal"
                 android:hint="@string/confirmar_passwordd" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnGuardar"
+            android:id="@+id/btnRegistrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/sh_bg_btn_gunmetal"
-            android:text="@string/guardar"
+            android:text="@string/registrar"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -161,7 +149,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="24dp"
             android:orientation="horizontal">
 
             <View
@@ -174,7 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Registrar con"
+                android:text="Regístrate con"
                 android:textColor="@color/police_blue"
                 android:textStyle="bold"/>
 
@@ -190,7 +178,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="16dp">
 
             <ImageView
                 android:id="@+id/ivFacebook"
@@ -199,7 +187,8 @@
                 android:background="@drawable/sh_bg_btn_flesh"
                 android:contentDescription="@string/content_description"
                 android:padding="16dp"
-                android:src="@drawable/ic_facebook"/>
+                android:src="@drawable/ic_facebook"
+                app:tint="@color/gunmetal" />
 
             <ImageView
                 android:id="@+id/ivGoogle"
@@ -209,7 +198,8 @@
                 android:background="@drawable/sh_bg_btn_flesh"
                 android:contentDescription="@string/content_description"
                 android:padding="16dp"
-                android:src="@drawable/ic_google"/>
+                android:src="@drawable/ic_google"
+                app:tint="@color/carmine_pink"/>
 
             <ImageView
                 android:id="@+id/ivApple"
@@ -219,33 +209,37 @@
                 android:background="@drawable/sh_bg_btn_flesh"
                 android:contentDescription="@string/content_description"
                 android:padding="16dp"
-                android:src="@drawable/ic_apple"/>
+                android:src="@drawable/ic_apple" />
 
         </FrameLayout>
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginStart="80dp"
-        android:layout_marginBottom="20dp"
-        android:text="¿ Si estas registrado ?"
-        android:textColor="@color/police_blue"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/tvLogin"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_marginStart="60dp"
-        android:layout_marginBottom="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="Inicia Sesión"
-        android:textColor="@color/carmine_pink"
-        android:textStyle="bold"/>
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="¿ Si estas registrado ?"
+            android:textColor="@color/police_blue"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tvLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="Iniciar Sesión"
+            android:textColor="@color/carmine_pink"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
 </FrameLayout>
