--- a/app/src/main/res/layout/fragment_validar.xml
+++ b/app/src/main/res/layout/fragment_validar.xml
@@ -7,63 +7,51 @@
     android:layout_height="match_parent"
     tools:context=".ui.Validar">
 
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@drawable/sh_bg_header_police_blue" >
+        android:gravity="start|center"
+        android:paddingHorizontal="16dp"
+        android:background="@drawable/sh_bg_header_police_blue"
+        android:text="Validar código"
+        android:textColor="@color/flesh"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
-            android:layout_marginStart="20dp"
-            android:text="Validar código"
-            android:textColor="@color/flesh"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </FrameLayout>
-
-    <LinearLayout
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilCodigo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="-96dp"
+        android:layout_marginHorizontal="50dp"
         android:layout_gravity="center"
-        android:orientation="vertical" >
+        app:endIconMode="clear_text"
+        app:hintEnabled="false" >
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilCodigo"
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:hintEnabled="false" >
+            android:background="@drawable/se_bg_edt_police_blue"
+            android:inputType="number"
+            android:maxLength="4"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="12dp"
+            android:textColorHint="@color/steel_teal"
+            android:hint= "Código de verificación" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/se_bg_edt_police_blue"
-                android:inputType="number"
-                android:maxLength="4"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
-                android:textColorHint="@color/steel_teal"
-                android:hint= "Código de verificación" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnValidar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/sh_bg_btn_gunmetal"
-            android:text="Validar código"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnValidar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:layout_gravity="center"
+        android:background="@drawable/sh_bg_btn_gunmetal"
+        android:text="Validar código"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
