--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
 
     <color name="bright_gray">#EEEEEE</color>
     <color name="dust_storm">#E5D0C5</color>
+    <color name="light_silver">#CFD8DC</color>
 
 </resources>
