--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -114,12 +114,12 @@
         app:layout_constraintEnd_toEndOf="@id/svBuscar" />
 
     <TextView
-        android:id="@+id/tv01"
+        android:id="@+id/tvCategorias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="Novedades..."
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/svBuscar" />
@@ -130,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv01"
+        app:layout_constraintTop_toBottomOf="@id/tvCategorias"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -139,7 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="Los más pedidos"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvNovedades" />
