--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,33 +2,27 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.Login">
 
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@drawable/sh_bg_header_police_blue" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:layout_gravity="center|start"
-            android:layout_marginStart="20dp"
-            android:text="@string/login_header"
-            android:textColor="@color/flesh"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </FrameLayout>
+        android:paddingHorizontal="16dp"
+        android:background="@drawable/sh_bg_header_police_blue"
+        android:gravity="start|center"
+        android:text="¡Vamos a Iniciar Sesión!"
+        android:textColor="@color/flesh"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="92dp"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -38,7 +32,6 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnIngresar"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
@@ -51,8 +44,8 @@
                 android:translationZ="5dp"/>
 
             <Button
-                android:id="@+id/btnRegistrar"
                 style="?android:attr/buttonBarButtonStyle"
+                android:id="@+id/btnRegistrar"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="-36dp"
@@ -69,16 +62,17 @@
             android:id="@+id/tilCorreo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="48dp"
+            app:endIconMode="clear_text"
             app:hintEnabled="false" >
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="16dp"
                 android:background="@drawable/se_bg_edt_police_blue"
                 android:inputType="textEmailAddress"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
+                android:maxLength="30"
                 android:textColorHint="@color/steel_teal"
                 android:hint="@string/correo" />
 
@@ -88,17 +82,17 @@
             android:id="@+id/tilPasswordd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             app:endIconMode="password_toggle"
             app:hintEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="16dp"
                 android:background="@drawable/se_bg_edt_police_blue"
                 android:inputType="textPassword"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
+                android:maxLength="20"
                 android:textColorHint="@color/steel_teal"
                 android:hint="@string/passwordd" />
 
@@ -107,24 +101,24 @@
         <TextView
             android:id="@+id/tvOlvidastes"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_height="48dp"
             android:layout_gravity="end"
             android:clickable="true"
             android:focusable="true"
+            android:gravity="center"
             android:text="@string/olvidastes_passwordd"
             android:textColor="@color/carmine_pink"
             android:textSize="16sp"
             android:textStyle="bold"/>
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnIniciarSesion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/sh_bg_btn_gunmetal"
-            android:text="@string/login"
+            android:text="Iniciar Sesión"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -133,7 +127,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="24dp"
             android:orientation="horizontal">
 
             <View
@@ -146,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/ingresar_con"
+                android:text="Iniciar Sesión"
                 android:textColor="@color/police_blue"
                 android:textStyle="bold"/>
 
@@ -162,31 +156,33 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="24dp">
 
             <ImageView
                 android:id="@+id/ivFacebook"
                 android:layout_width="108dp"
-                android:layout_height="84dp"
+                android:layout_height="72dp"
                 android:background="@drawable/sh_bg_btn_flesh"
                 android:contentDescription="@string/content_description"
                 android:padding="16dp"
-                android:src="@drawable/ic_facebook"/>
+                android:src="@drawable/ic_facebook"
+                app:tint="@color/gunmetal" />
 
             <ImageView
                 android:id="@+id/ivGoogle"
                 android:layout_width="108dp"
-                android:layout_height="84dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:background="@drawable/sh_bg_btn_flesh"
                 android:contentDescription="@string/content_description"
                 android:padding="16dp"
-                android:src="@drawable/ic_google"/>
+                android:src="@drawable/ic_google"
+                app:tint="@color/carmine_pink" />
 
             <ImageView
                 android:id="@+id/ivApple"
                 android:layout_width="108dp"
-                android:layout_height="84dp"
+                android:layout_height="72dp"
                 android:layout_gravity="end"
                 android:background="@drawable/sh_bg_btn_flesh"
                 android:contentDescription="@string/content_description"
@@ -197,27 +193,30 @@
 
     </LinearLayout>
 
-   <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_gravity="bottom"
-       android:layout_marginStart="80dp"
-       android:layout_marginBottom="30dp"
-       android:text="¿ Si estas registrado ?"
-       android:textColor="@color/police_blue"
-       android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/tvRegistrar"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_gravity="bottom|center"
-        android:layout_marginStart="80dp"
-        android:layout_marginBottom="30dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="Registrate ahora"
-        android:textColor="@color/carmine_pink"
-        android:textStyle="bold"/>
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="¿ Si estas registrado ?"
+            android:textColor="@color/police_blue"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tvRegistrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="Registrate ahora"
+            android:textColor="@color/carmine_pink"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
 </FrameLayout>
