--- a/app/src/main/res/layout/fragment_passwordd.xml
+++ b/app/src/main/res/layout/fragment_passwordd.xml
@@ -7,105 +7,72 @@
     android:layout_height="match_parent"
     tools:context=".ui.Passwordd">
 
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@drawable/sh_bg_header_police_blue" >
+        android:background="@drawable/sh_bg_header_police_blue"
+        android:paddingHorizontal="16dp"
+        android:gravity="start|center"
+        android:text="Cambiar contraseña"
+        android:textColor="@color/flesh"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
-            android:layout_marginStart="20dp"
-            android:text="Cambiar contraseña"
-            android:textColor="@color/flesh"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </FrameLayout>
-
-    <LinearLayout
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilPasswordd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="-164dp"
         android:layout_gravity="center"
-        android:orientation="vertical" >
+        app:endIconMode="password_toggle"
+        app:hintEnabled="false">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilPasswordd"
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:endIconMode="password_toggle"
-            app:hintEnabled="false">
+            android:background="@drawable/se_bg_edt_police_blue"
+            android:inputType="textPassword"
+            android:padding="16dp"
+            android:maxLength="20"
+            android:textColorHint="@color/steel_teal"
+            android:hint="@string/passwordd" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/se_bg_edt_police_blue"
-                android:inputType="textPassword"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
-                android:textColorHint="@color/steel_teal"
-                android:hint="@string/passwordd" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilPassworddConfirmar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            app:endIconMode="password_toggle"
-            app:hintEnabled="false">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/se_bg_edt_police_blue"
-                android:inputType="textPassword"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
-                android:textColorHint="@color/steel_teal"
-                android:hint="@string/confirmar_passwordd" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnActualizar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/sh_bg_btn_gunmetal"
-            android:text="Actualizar contraseña"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilPassworddConfirmar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginStart="80dp"
-        android:layout_marginBottom="20dp"
-        android:text="¿ Si estas registrado ?"
-        android:textColor="@color/police_blue"
-        android:textStyle="bold"/>
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="-96dp"
+        android:layout_gravity="center"
+        app:endIconMode="password_toggle"
+        app:hintEnabled="false">
 
-    <TextView
-        android:id="@+id/tvLogin"
-        android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/se_bg_edt_police_blue"
+            android:inputType="textPassword"
+            android:padding="16dp"
+            android:maxLength="20"
+            android:textColorHint="@color/steel_teal"
+            android:hint="@string/confirmar_passwordd" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btnActualizar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_marginStart="60dp"
-        android:layout_marginBottom="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="Inicia Sesión"
-        android:textColor="@color/carmine_pink"
-        android:textStyle="bold"/>
+        android:layout_marginHorizontal="32dp"
+        android:layout_gravity="center"
+        android:background="@drawable/sh_bg_btn_gunmetal"
+        android:text="Actualizar contraseña"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
