--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/tvHeader"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="96dp"
         android:gravity="start|center"
         android:paddingHorizontal="16dp"
         android:background="@drawable/sh_bg_header_police_blue"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="Categorias"
+        android:text="@string/categorias"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,22 +63,112 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="20dp"
+        android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@id/tvCategorias"
         app:layout_constraintStart_toStartOf="parent" >
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="108dp"
+                android:id="@+id/tvHotDrinks"
+                android:layout_width="136dp"
                 android:layout_height="48dp"
+                android:gravity="center"
+                android:paddingStart="36dp"
                 android:background="@drawable/sh_bg_btn_carmine_pink"
                 android:clickable="true"
                 android:focusable="true"
-                android:text="Hot drinks" />
-        </LinearLayout>
+                android:text="Hot drinks"
+                android:textColor="@color/flesh"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:id="@+id/ivHotDrinks"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/sh_bg_circle_carmine_pink"
+                android:backgroundTint="@color/flesh"
+                android:clickable="true"
+                android:focusable="true"
+                android:contentDescription="@string/content_description"
+                android:padding="8dp"
+                android:src="@drawable/ic_hot_drinks"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tint="@color/carmine_pink" />
+
+            <TextView
+                android:id="@+id/tvColdDrinks"
+                android:layout_width="136dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="8dp"
+                android:gravity="center"
+                android:paddingStart="40dp"
+                android:background="@drawable/sh_bg_btn_bright_gray"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="Cold drinks"
+                android:textColor="@color/police_blue"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvHotDrinks" />
+
+            <ImageView
+                android:id="@+id/ivColdDrinks"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="12dp"
+                android:background="@drawable/sh_bg_circle_carmine_pink"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:focusable="true"
+                android:contentDescription="@string/content_description"
+                android:padding="8dp"
+                android:src="@drawable/ic_cold_drinks"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvHotDrinks"
+                app:tint="@color/police_blue" />
+
+            <TextView
+                android:id="@+id/tvSandwichs"
+                android:layout_width="136dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="8dp"
+                android:gravity="center"
+                android:paddingStart="40dp"
+                android:background="@drawable/sh_bg_btn_bright_gray"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="Sandwichs"
+                android:textColor="@color/police_blue"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvColdDrinks" />
+
+            <ImageView
+                android:id="@+id/ivSandwichs"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="12dp"
+                android:background="@drawable/sh_bg_circle_carmine_pink"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:focusable="true"
+                android:contentDescription="@string/content_description"
+                android:padding="8dp"
+                android:src="@drawable/ic_sandwichs"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvColdDrinks"
+                app:tint="@color/police_blue" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </HorizontalScrollView>
 
@@ -86,8 +176,7 @@
         android:id="@+id/rvProductos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_margin="20dp"
         app:layout_constraintTop_toBottomOf="@id/hsvCategorias"
         app:layout_constraintStart_toStartOf="parent" />
 
