--- a/app/src/main/res/layout/item_cafe_vertical.xml
+++ b/app/src/main/res/layout/item_cafe_vertical.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
+        android:id="@+id/ivFavorito"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginTop="90dp"
